--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,18 @@ header {
     height: 100vh;
     border-bottom-right-radius: 100px;
     font-size: 25px;
-
+    position: relative;
 }
 
 .desktopNav {
     display: flex;
-    padding-top: 50px;
+    padding-top: 25px;
     color: white;
     align-items: center;
 }
 
 .navLogo {
-    margin-left: 20%;
+    margin-left: 15%;
 }
 
 
@@ -33,7 +33,7 @@ header {
     display: flex;
     justify-content: flex-end;
     margin-left: auto;
-    margin-right: 25%;
+    margin-right: 15%;
 }
 
 .navWrapper ul {
@@ -43,11 +43,191 @@ header {
 
 .navWrapper ul li {
     margin: 0 10px;
+    position: relative;
+    overflow: hidden;
 }
+
+
 
 .navWrapper a {
     text-decoration: none;
     color: white;
+    transition: all 0.5s;
+}
+
+.navWrapper a:hover {
+    color: #2e2e2e;
+}
+
+.desktopNav ul li a {
+    position: relative; 
+    color: white; 
+    text-decoration: none; 
+  }
+
+  .desktopNav ul li a::after {
+    content: ''; 
+    position: absolute; 
+    bottom: 0px; 
+    width: 0; 
+    height: 2px; 
+    background-color: black; 
+    transition: width 0.3s ease; 
+  }
+
+  .desktopNav ul li a:hover::after {
+    width: 100%; 
+    left: 0; 
+}
+
+.hero {
+    margin-top: 10%;
+    margin-left: 15%;
+    font-size: 50px;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.heroText span{
+    background-color: black;
+    color: white;
+    padding: 0 10px;
+    font-size: 60px ;
+}
+
+.heroButtons {
+    margin: 20px 0 0 60px;
+}
+
+.heroButtons button {
+    font-size: 30px;
+    padding: 10px 20px;
+    background-color: #ec7505;
+    border: solid 2px #2e2e2e;
+    transition: all 0.3s;
+    border-radius: 10px;
+}
+
+.heroButtons button:hover {
+    cursor: pointer;
+    background-color: #2e2e2e;
+    color: white    ;
+}
+
+#heroBtn1 {
+    background-color: #2e2e2e;
+    color: white;
+    position: relative;
+}
+#heroBtn1:hover{
+    animation: upAndDown 0.5s infinite alternate;
+}
+
+@keyframes upAndDown {
+    0% {
+        transform: translateY(0); 
+      }
+      50% {
+        transform: translateY(-10px); 
+      }
+      100% {
+        transform: translateY(0); 
+      }
 }
 
 
+#img1{
+    scale: 0.6;
+    position: absolute;
+    bottom: -140px;
+    right: 0;
+}
+
+#img2{
+    position: absolute;
+    top: 150px;
+    right: -160px;
+    scale: 0.6;
+}
+
+.off-screen-menu {
+    background-color: #ec7505;
+    height: 100vh;
+    width: 100%;    
+    max-width: 450px;
+    position: fixed;
+    top: 0;
+    right: -450px ;
+    transition: all 0.5s ease;
+    z-index: 10;
+    text-align: center;
+}
+
+.off-screen-menu.active {
+    right: 0;
+}
+
+.hamNav {
+    padding: 1rem;
+    display: flex;
+    background-color: #ec7505;
+    color: white;
+    margin-left: 15%;
+    padding: 25px;
+}
+
+.ham-menu {
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    position: relative;
+    
+}
+
+.ham-menu span {
+    height: 5px;
+    width: 100%;
+    background-color: white;
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease;
+    z-index: 20;
+}
+
+.ham-menu span:nth-child(1) {
+    top: 25%;
+}
+.ham-menu span:nth-child(3) {
+    top: 75%;
+}
+
+.ham-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%, 50%) rotate(45deg);
+    transition: all 0.5s ease;
+}
+.ham-menu.active span:nth-child(2) {
+    opacity: 0;
+    
+}
+.ham-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, 50%) rotate(-45deg);
+    transition: all 0.5s ease;
+}
+
+.off-screen-menu ul {
+    list-style-type: none;
+}
+
+.off-screen-menu ul li a {
+    text-decoration: none;
+    color: white;
+    line-height: 2;
+    font-size: 50px;
+    
+}
