--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 }
 
 header {
-    background-color: #ec7505;
+    background: linear-gradient(45deg, violet, lightblue);
     height: 100vh;
     border-bottom-right-radius: 100px;
     font-size: 25px;
@@ -103,16 +103,18 @@ header {
 .heroButtons button {
     font-size: 30px;
     padding: 10px 20px;
-    background-color: #ec7505;
+    background: ;
     border: solid 2px #2e2e2e;
     transition: all 0.3s;
     border-radius: 10px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .heroButtons button:hover {
     cursor: pointer;
     background-color: #2e2e2e;
     color: white    ;
+
 }
 
 #heroBtn1 {
@@ -152,7 +154,7 @@ header {
 }
 
 .off-screen-menu {
-    background-color: #ec7505;
+    background:linear-gradient(45deg, violet, lightblue) ; ;
     height: 100vh;
     width: 100%;    
     max-width: 450px;
@@ -171,7 +173,7 @@ header {
 .hamNav {
     padding: 1rem;
     display: flex;
-    background-color: #ec7505;
+    background-color: none;
     color: white;
     margin-left: 15%;
     padding: 25px;
@@ -230,4 +232,82 @@ header {
     line-height: 2;
     font-size: 50px;
     
+}
+
+
+.serviceContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 100px;
+    margin-bottom: 300px; /* Delete me later!  */
+}
+
+.box {
+    width: 600px;
+    height: 650px;
+    border-radius: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);}
+
+
+.box .serviceOffer{
+    background:linear-gradient(45deg, violet, lightblue) ;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+}
+
+.box .serviceDescription {
+    width: 70%; 
+    margin-left: 10%;
+    margin: 20px 10%;
+    font-size: 30px;
+    
+}
+
+.box .price{
+    position: absolute;
+    bottom: 35px;
+    width: 100%;
+    margin-bottom: 10%;
+    text-align: center;
+
+}
+
+.box .price h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box .price span{
+    font-size: 40px;
+    font-weight: bold;
+    color: green;
+    margin-left: 10px;
+}
+
+.box button{
+    position: absolute;
+    bottom: 20px;
+    font-size: 20px;
+    font-weight: bold   ;
+    color: #002137;
+    padding: 20px 30px;
+    background: linear-gradient(45deg, violet, lightblue);
+    border: none;
+    border-radius: 30px;
+    transition: all 0.3s ease;
+}
+
+.box button:hover {
+    cursor: pointer;
+    background: linear-gradient(45deg, lightblue, violet);
+    scale: 1.2;
 }
