--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,9 @@ header {
 }
 
 .off-screen-menu {
-    background:linear-gradient(45deg, violet, lightblue) ; 
+    background: rgba(255, 255, 2555, .1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0px 25px 45px rgba(0, 0, 0, 0.2);
     height: 100vh;
     width: 100%;    
     max-width: 450px;
@@ -227,6 +229,9 @@ header {
 
 .off-screen-menu ul li a {
     text-decoration: none;
+    background-color: black;
+    border-radius: 10px;
+    padding: 0 20px;
     color: white;
     line-height: 2;
     font-size: 50px;
@@ -247,8 +252,7 @@ header {
     background-color: white;
     border-radius: 25px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-    
-    margin: 200px 0 ; /*Delete me later*/
+    margin: 100px 0 ; 
 }
 
 #serviceHeader {
@@ -291,12 +295,11 @@ header {
 }
 
 .box:hover {
-    scale: 1.1;
+    scale: 1.05;
 }
 
 .serviceOffer {
     margin: 20px;
-
 }
 
 .price {
@@ -348,4 +351,17 @@ header {
 .serviceDescription img {
     width: 30px;
     margin: 10px;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(100%);
+    transition: all 2s ease;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translate(0);
 }
