--- a/styles.css
+++ b/styles.css
@@ -353,6 +353,12 @@ header {
     margin: 10px;
 }
 
+.hiddenFade {
+    opacity: 0;
+    filter: blur(5px);
+    transition: all 2s ease;
+}
+
 .hiddenLeft {
     opacity: 0;
     filter: blur(5px);
@@ -457,3 +463,73 @@ header {
     top: -20px;
 }
 
+.testImg img {
+    width: 300px;
+    border-radius: 20px;
+    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
+
+}
+
+
+.testimoials{
+    color: #343a40;
+    
+}
+
+.testiWrapper{
+
+}
+
+.testiContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 100px;
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+.testiTitle{
+    margin: 40px;
+    font-size: 30px;
+}
+
+.testis{
+    color: #343a40;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;    
+    width: 100%;
+    
+}
+
+.test{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    margin: 20px;
+}
+
+.testContent{
+    display: flex ;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+
+
+.testText{
+    justify-content: center;
+    font-size: 30px;
+    width: 300px;
+    margin: 20px;
+}
+
+.testPerson {
+    margin: 20px;
+}
