--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -144,3 +144,9 @@
         border-radius: 20px; 
      }
 }
+
+@media screen and (max-width: 500px){
+    .portfolioImage img {
+        width: 300px;
+    }
+}
