--- a/styles.css
+++ b/styles.css
@@ -757,3 +757,76 @@ header {
     max-width: 70%;
     margin-bottom: 40px;
 }
+
+
+.linkWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    border-top: 1px solid white;
+    justify-content: center;
+    
+}
+
+.linkBox {
+    display: flex;
+    flex-direction: column;
+    margin: 0 50px;
+    margin-top: 40px;
+}
+.linkBox p {
+    font-size: 30px;
+}
+
+.linkContent ,.linksContent {
+    margin-top: 20px;
+}
+.linksContent img{
+    transition: all 0.3s ease;
+    margin: 0 5px;
+}
+
+.linkContent a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: all 0.3s ease;
+}
+
+.linkContent a:hover{
+    color: #3498db;
+
+}
+.linksContent img:hover{
+    scale: 1.2;
+}
+
+.links{
+    padding: 50px 0;
+    background-color: #0d1b2a;
+    color: white;
+}
+
+.links a {
+    color: white;
+}
+
+.footer {
+    color: white;
+    padding: 50px 0;
+    text-align: center;
+    background-color: #0d1b2a;
+}
+
+.linkBox:nth-child(1) {
+    transition-delay: 200ms;
+}
+.linkBox:nth-child(2) {
+    transition-delay: 400ms;
+}
+.linkBox:nth-child(3) {
+    transition-delay: 600ms;
+}
+.linkBox:nth-child(4) {
+    transition-delay: 800ms;
+}
