--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: "Roboto", sans-serif;
     background-color: #f8f9fa;
@@ -19,9 +24,10 @@ header {
 
 .desktopNav {
     display: flex;
-    padding-top: 25px;
+    padding: 12px 0;
     color: white;
     align-items: center;
+    
 }
 
 .navLogo {
@@ -34,6 +40,7 @@ header {
     justify-content: flex-end;
     margin-left: auto;
     margin-right: 15%;
+
 }
 
 .navWrapper ul {
@@ -53,6 +60,7 @@ header {
     text-decoration: none;
     color: white;
     transition: all 0.5s;
+    
 }
 
 .navWrapper a:hover {
@@ -225,6 +233,7 @@ header {
 
 .off-screen-menu ul {
     list-style-type: none;
+    margin-top: 25%;
 }
 
 .off-screen-menu ul li a {
@@ -809,6 +818,7 @@ header {
 
 .links a {
     color: white;
+    
 }
 
 .footer {
@@ -830,3 +840,26 @@ header {
 .linkBox:nth-child(4) {
     transition-delay: 800ms;
 }
+
+
+.sticky {
+    background-color: #f8f9fa;
+    box-shadow: 0px 25px 45px rgba(0, 0, 0, 0.2);
+    color: black;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000; 
+    transition: all 0.8s ease; 
+    margin: 0;
+  }
+
+  .sticky span {
+    background-color: black;
+    
+  }
+
+.sticky ul li a {
+    color: black;
+}
+
