--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -17,7 +17,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 0;
+        margin-top: 0px;
         font-size: 50px;
     }
     .heroButtons {
