--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -2,6 +2,7 @@
     .desktopNav {
         display: none;
     }
+    
 }
 @media screen and (min-width: 1401px) {
     .hamNav {
@@ -30,6 +31,8 @@
         right: 200px;
     }
 }
+
+
 
 @media  screen and (max-width: 1000px) {
     #img1 {
@@ -148,5 +151,92 @@
 @media screen and (max-width: 500px){
     .portfolioImage img {
         width: 300px;
+    }
+}
+
+@media screen and (max-height: 800px){
+    #img1 {
+        right: -40px;
+
+    }
+    .hero {
+        all: unset;
+        display: flex ;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .heroText {
+        font-size: 40px;
+    }
+    .heroButtons {
+        margin: 20px 0 0 0;
+    }
+    .header {
+        min-height: 900px;
+    }
+}
+
+
+@media screen and (max-width: 540px) and (max-height: 720px){
+    #img1{
+
+        display: none;
+    }
+}
+
+@media screen and (max-width: 375px) and (max-height: 667px){
+    .header{
+        min-height: 800px;
+        font-size: 10px;
+    }
+
+    .heroText{
+        font-size: 20px;
+        
+    }
+
+    .hamMenu {
+        margin-left: 0;
+    }
+
+    .hamNav h2{
+        display: none;
+    }
+    
+}
+
+@media screen and (max-width: 768px){
+    .hidden ,.hiddenLeft, .hiddenFade{
+        opacity: 1;
+        filter: none;
+        transform: none;
+    }
+}
+
+@media screen and (max-width: 390px) and (max-height: 844px){
+    .heroText{
+    }
+}
+@media screen  and (min-width: 1000px) and (max-width:1600px){
+    #img1{
+        display: none;
+    }
+}
+
+@media screen and (max-height:800px) {
+    #img1{
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 1024px) and (max-height: 1366px){
+    #header{
+        
+    }
+    .hero{
+        margin: 0;
+        margin-top: 200px;
     }
 }
